Added JAVA_HOME set to the pig start wrapper (/usr/bin/pig). Improved code documentation.

--- a/chef/cookbooks/pig/templates/default/pig-properties.erb
+++ b/chef/cookbooks/pig/templates/default/pig-properties.erb
@@ -18,10 +18,15 @@
 #
 
 #######################################################################
+# Generated and maintained by Crowbar for <%= @node[:fqdn] %>
+#######################################################################
+
+#######################################################################
 # Pig configuration file (/etc/pig/conf/pig-properties).
 # All values can be overwritten by command line arguments.
 # see bin/pig -help
 #######################################################################
+
 
 # log4jconf log4j configuration file
 # log4jconf=./conf/log4j.properties
